# Smart-Diagnostic-System

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fri_may_08_2026_system_architecture_for_to_b_medical_issue.md  rust_out
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: release-windows.yml
analyzer/src/: app.js  index.html  styles.css
analyzer/src-tauri/: Cargo.toml  tauri.conf.json
analyzer/src-tauri/src/: commands.rs  lib.rs  main.rs  report.rs  rule_engine.rs
collector/: collector.toml.example
collector/.claude/: settings.local.json
collector/src/: app.js  app.js.backup  diagnostic-redirect.html  index.html  styles.css
collector/src-tauri/: Cargo.toml  tauri.conf.json
collector/src-tauri/capabilities/: diagnostic.json  main.json
collector/src-tauri/icons/: icon.icns
collector/src-tauri/src/: cleanup.rs  commands.rs  config_store.rs  db_collector.rs  dedup_cache.rs  deployment.rs  diagnosis.rs  elk_collector.rs  es_collector.rs  explain_collector.rs  lib.rs  main.rs  nacos_discovery.rs  scheduler.rs  sql_extractor.rs  ssh_collector.rs  ssh_log_collector.rs  validator.rs  webview_capture.rs
crates/diag-core/: Cargo.toml
crates/diag-core/src/: collector_trait.rs  config.rs  lib.rs  log_parser.rs  masking.rs  models.rs  package.rs  sql_parser.rs  url_resolver.rs
crates/diag-core/tests/: integration.rs
docs/plans/: 2026-05-08-smart-diagnostic-mvp-design.md
docs/superpowers/plans/: 2026-05-26-collector-v2.md  2026-06-23-realtime-diagnostic-report-format.md
docs/superpowers/specs/: 2026-05-26-collector-v2-design.md  2026-06-23-realtime-diagnostic-report-format-design.md
