[workspace]
resolver = "2"
members = [
    "crates/diag-core",
    "collector/src-tauri",
    "analyzer/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vpcoderli"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex
regex = "1"

# ZIP
zip = "2"

# SSH
russh = "0.46"
russh-keys = "0.46"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "chrono", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
elasticsearch = "8.19.0-alpha.1"

# Concurrency utilities
futures = "0.3"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

# Shared crate
diag-core = { path = "crates/diag-core" }

