[package]
name = "smart-diag-analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
diag-core = { workspace = true }
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[lib]
name = "smart_diag_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
