[package]
name = "smart-diag-collector"
version.workspace = true
edition.workspace = true

[dependencies]
diag-core = { workspace = true }
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[lib]
name = "smart_diag_collector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
