[package]
name = "smart-diag-collector"
version.workspace = true
edition.workspace = true

[dependencies]
diag-core = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-dialog = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
url = "2"
http = "1"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[lib]
name = "smart_diag_collector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
