[package]
name = "diag-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
zip = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = "2"

